2-network-policies/kubernetes/database/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: task-2-namespace
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: database-pod
